# ocserv

./: .gitignore  .gitlab-ci.yml  .triage-policies.yml  AGENTS.md  CONTRIBUTING.md  NEWS  README.md  configure.ac  dist-script.sh  meson.build  meson_options.txt
contrib/ai/: AGENTS.md  README.md
contrib/ai/personas/: ocserv-contributor.md  ocserv-core-dev.md  ocserv-security-auditor.md
contrib/ai/protocols/: adversarial-falsification.md  anti-hallucination.md  exhaustive-path-tracing.md  memory-safety-c.md  operational-constraints.md  requirements-elicitation.md  requirements-from-implementation.md  requirements-reconciliation.md  security-vulnerability.md  self-verification.md
contrib/ai/taxonomies/: stack-lifetime-hazards.md
doc/: Makefile.am  README-oidc.md  README-radius.md  design.md  ocserv.8.md  sample.config
doc/requirements/: README.md
doc/requirements/internal/: authentication.md  config.md  general.md  ipc.md
src/: Makefile.am  auth-unix.c  cfg.pb-c.c  cfg.pb-c.h  cfg.proto  common-config.h  config.c  ctl.proto  icmp-ping.c  ip-lease.c  ipc.proto  isolate.c  isolate.h  main-auth.c  main-ban.c  main-ban.h  main-ctl-unix.c  main-limits.c  main-log.c  main-proc.c  main-sec-mod-cmd.c  main-user.c  main-worker-cmd.c  main.c  main.h  meson.build  namespace.c  namespace.h  ocserv-fw-nftables  route-add.c  sec-mod-auth.c  sec-mod-cookies.c  sec-mod-db.c  sec-mod-resume.c  sec-mod-sup-config.c  sec-mod-sup-config.h  sec-mod.c  sec-mod.h  subconfig.c  tlslib.c  (+16 more)
src/acct/: radius.c
src/auth/: pam-stack.h  pam.c  pam.h  plain.c  radius.c  radius.h
src/common/: common.c  hmac.c
src/gnulib/: cloexec.h
src/inih/: ini.c
src/occtl/: occtl.c  occtl.h  print.c  unix.c
src/ocpasswd/: ocpasswd.c
src/sup-config/: file.c  radius.c
tests/: Makefile.am  ban-ips.c  bandwidth  check-config-scope.py  cipher-common.sh  common.sh  config-inherit.c  connect-ios-script  connect-script  cstp-recv.c  defvhost-traffic  disconnect-user  disconnect-user2  fw-ocserv  fw-ocserv-ports-routes  generate_oidc_test_data.c  haproxy-connect  haproxy-proxyproto  haproxy-proxyproto-v1  idle-timeout-icmpv6  ipv6-iface  ipv6-small-net  json  lz4-compression  lzs-compression  meson.build  no-ipv6-ocv3  ns.sh  ocpasswd-test  pam-guard-page.c  port-parsing.c  proxyproto-v1.c  proxyproto-v2.c  radius  radius-config  radius-group  radius-ipv6-prefix  radius-multi-group  radius-multi-group-comma  radius-otp  (+33 more)
tests/certs/: user-cert-no-uid.pem  user-cert-no-uid.tmpl  user-cert-rfc822name-other.pem  user-cert-rfc822name-other.tmpl  user-cert-uid-other.pem  user-cert-uid-other.tmpl  user-group-single-cert.pem  user-group-single-cert.tmpl
tests/data/: apple-ios.config  bandwidth.config  config-per-group-url-cert.config  config-per-group-url-pass.config  config-per-group.config  defvhost-traffic.config  disconnect-user.config  fw-ocserv-ports-routes.config  fw-ocserv-routes.config  fw-ocserv.config  haproxy-proxyproto-v1.config  haproxy-proxyproto.config  idle-timeout-icmpv6.config  idle-timeout.config  ipv6-iface.config  kerberos.config  multiple-routes.config  no-route-default.config  no-route-group.config  ping-leases.config  radius-group.config  radius-multi-group-comma.config  radius-multi-group.config  radius-otp.config  radius.config  session-timeout.config  test-ban.config  test-camouflage-norealm.config  test-camouflage.config  test-cert-opt-pass.config  test-ciphers.config  test-compression-lz4.config  test-compression-lzs.config  test-cookie-invalidation.config  test-cookie-timeout-2.config  test-ed25519.config  test-enc-key.config  test-enc-key2.config  test-explicit-ip.config  test-group-cert-autoselect-filter.config  (+46 more)
tests/data/raddb/: users
tests/data/radiusclient/: dictionary
tests/user-config/: noudp3  testipnet  testuser
